--- a/WebDev/EcommerceWebsite/index.html
+++ b/WebDev/EcommerceWebsite/index.html
@@ -51,7 +51,7 @@
                      <a class="nav-link" href="cycle.html">Our Cycle</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="shop.html">Shop</a>
+                     <a class="nav-link" href="shop.php">Shop</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="news.html">News</a>
