--- a/WebDev/EcommerceWebsite/index.html
+++ b/WebDev/EcommerceWebsite/index.html
@@ -115,7 +115,7 @@
                            <div class="image_1"><img src="images/bike3.png"></div>
                         </div>
                         <div class="col-md-5">
-                           <h1 class="banner_taital">2023 Canyon LUX World Cup CF 7</h1>
+                           <h1 class="banner_taital">2023 Canyon Exceed CF 7</h1>
                            <p class="banner_text">Ride to a better you! Our comfortable bikes are perfect for urban commuters and fitness enthusiasts.  </p>
                            <div class="contact_bt"><a href="contact.php">Shop Now</a></div>
                         </div>
